--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@
             // $.post('http://localhost:3000/api/get_access_token', {
             //   public_token: public_token,
             // });
-            $.post('http://localhost:3000/api/items', {
+            $.post('https://stark-brushlands-11677.herokuapp.com/api/items', {
               public_token: public_token,
                   success: function() {   
                   location.reload(); 
